Remove fixed height from media block on mobile at home page

--- a/sites/all/themes/md_leaders/scss/blog-page.scss
+++ b/sites/all/themes/md_leaders/scss/blog-page.scss
@@ -196,7 +196,8 @@
 
 			.media-body {
 				width: 100%;
-				height: 222px;
+				height: auto;
+				padding-bottom: 40px;
 			}
 		}
 
